--- a/History.txt
+++ b/History.txt
@@ -1,6 +1,11 @@
-=== 1.3 /
+=== 1.3 / 2010-10-12
 
 * (7rans requested) Step definitions to show their source code; required a better source definition to be stored during creation of the CodeObject
+* Fixes to the Feature template which had some unclosed table header elements
+* Scenario Outline helper methods added to Scenarios
+* Scenario Outlines, Tables, and Multiline Strings had other minor CSS changes
+* Step tables and Scenario Example tables are no longer locked to 150px; instead that is the minimum width
+* Tables and Multiline Strings (PyStrings) are no longer displayed in the steps frame which was causing ugliness with the striping of the rows
 
 === 1.2 / 2010-10-10
 
