FIX Step Transform YARD Handler Regex
- FIX Step Transform YARD handler regex was poorly formed and raised exceptions
  when a transform contained a forward-slash (even if escaped).  I changed it to
  look for the entire string and then find the block start declaration at the end
+ Added complicated step transform to the example suite
+ FIX where constants were definied and returning the nil from each back to the
  constants when they were being set inside the block.
+ FIX used Registry(:constant) instead of owner.  Ran into issues with that earlier
  when namespaces came into play.

--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,18 @@
+=== 1.5.2 / 2010-10-26
+
+* FIX - Step Transform YARD handler regex was poorly formed and raised exceptions
+  when a transform contained a forward-slash (even if escaped).
+
+=== 1.5.1 / 2010-10-26
+
+* Unified Feature/Scenario search field that resembles the Namespace-Class field
+* Tag search also displays immediate features/scenarios
+* Removed Scenario searching field
+* Added filename and line number to a number of locations
+* Minor Tag template enhancements
+* FIX - Scenario Outline Reference was being replaced with the first example
+* FIX - Scenario Outlines were not getting counted for tags
+
 === 1.5 / 2010-10-25
 
 * Steps that have found their step definitions will also attempt to find their
