Matching Step Definition and Step Transform Optimizations
Started reviewing the code to begin optimization process and found
quite a bit of waste around continually grabbing all the step definitions
and step transforms from the registry, iterating, and creating
regular expression to make the matches.

Created a cache of the definitions and transforms in a hash with the
comparison regex as the key.  Makes the compare a much faster process.

Also make transform look ups at the same time while in the middle of
the match instead of in a separate transaction.

--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,12 @@
+=== 1.5.3 / 2010-10-26
+
+* FIX - Step Definition YARD handler regex was poorly formed and raised exceptions
+  when it contained a forward-slash (even if escaped).
+* FIX - Step highlighting was causing 'Out Of Memory' issues because
+  gsub could not handle nil values.
+* FIX - Step highlighting failed to replace matches properly causing for corrupted
+  HTML span values to appear in the highlighted step definitions
+
 === 1.5.2 / 2010-10-26
 
 * FIX - Step Transform YARD handler regex was poorly formed and raised exceptions
