--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 1.6.1 / 2010-11-04
+
+* FIX - Feature Directries with sub-directories aborted serialization
+
 === 1.6.0 / 2010-11-02
 
 * Feature directories, subdirectories, and Tags breadcrumb pages are present
