FIX - Cucumber/Gherkin require issue, Version Bump
  Found that because I was requiring a gherkin file first it was
  loading a version of gherkin and then cucumber came around and
  was angry that I had loaded a version of gherkin already.

  Removed that first require to gherkin, as it was not necessary,
  allowing Cucumber to be required first and pulling in the gherkin
  version that it prefers.

--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 1.7.1 / 2010-11-27
+
+* FIX Scenario Outline keyword generating an error on CentOS, Ruby 1.8.7
+* FIX Requiring Cucumber before Gherkin so that correct version is loaded
+
 === 1.7.0 / 2010-11-18
 
 * Dynamic Tag Union / Intersection
