History, Version 1.7.2, table header color change
  + Updated to version 1.7.2
  + Changed the strong color of the table header to something softer

--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 1.7.2 / 2010-11-30
+
+* Step Definition and Transform page enhancements
+* Step Regex links to Rubular
+* FIX Steps with HTML encoded characters will display correctly
+
 === 1.7.1 / 2010-11-28
 
 * Feature file with layout enhancements
