--- a/History.txt
+++ b/History.txt
@@ -1,6 +1,7 @@
-=== 2.0.0 / 2011-02-06
+=== 2.0.0 / 2011-02-08
 
-- YARD Plugin Compatibility
+* Cucumber In The YARD becomes `yard-cucumber` and with that gains the
+  benefits of being a YARD plugin
 
 === 1.7.9 / 2011-02-05
 
