--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 2.1.1 / 2011-06-17
+
+* Gherkin 2.4.0 Compatibility (Thanks @bowsersenior)
+
 === 2.1.0 / 2011-05-22
 
 * YARD 0.7.0 compatibility (removed some monkey-patching)
