--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 2.1.2 / 2011-09-16
+
+* JRuby Bug Fix (Thanks @aledalgrande)
+
 === 2.1.1 / 2011-06-17
 
 * Gherkin 2.4.0 Compatibility (Thanks @bowsersenior)
