--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 2.1.3 / 2011-09-24
+
+* Support for Gherkin ~ 2.5 (Thanks @turboladen)
+
 === 2.1.2 / 2011-09-16
 
 * JRuby Bug Fix (Thanks @aledalgrande)
