--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 2.1.4 / 2011-10-10
+
+* Support for multiple scenario outlines (Thanks @jmerrifield)
+
 === 2.1.3 / 2011-09-24
 
 * Support for Gherkin ~ 2.5 (Thanks @turboladen)
