--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 2.1.5 / 2011-10-19
+
+* FIX for multiple scenario outlines (Thanks @ardavis)
+
 === 2.1.4 / 2011-10-10
 
 * Support for multiple scenario outlines (Thanks @jmerrifield)
