--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 2.2.0/ 2012-05-29
+
+* Fixes and changes to become compatible with YARD 0.8.1
+
 === 2.1.7/ 2011-11-24
 
 * Better parsing support for doc_strings (thanks @nikosd)
