--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 2.3.0/ 2013-07-12
+
+* Fixes for Cucumber ~> 1.3 and gherkin ~> 2.12 by loading
+  a required platform file.
+
 === 2.2.3/ 2013-02-15
 
 * Step Definitions that are marked as 'pending' will now appear as pending
